# ayunis-core

./: .agentfiles  .dockerignore  .env.example  .gitignore  .infisical.json  .pi  .worktreeinclude  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_EXECUTION_INTEGRATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  README.md  compose.dev.yml  dev  docker-compose.test.override.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.claude/: CLAUDE.md  settings.json
.config/: wt.toml
.cursor/: BUGBOT.md  Dockerfile  README.md  common.sh  environment.json  install.sh  start.sh
.cursor/commands/: backend-review.md  make-it-nice.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: agent-runtime.yml  api-schema-drift.yml  backend-tests.yml  circular-deps.yml  cleanup-cursor-branches.yml  complexity-check.yml  db-schema-drift.yml  dead-code.yml  dependabot-remove-codeowners.yml  dependency-check.yml  deploy-internal-manual.yml  deploy-internal.yml  deploy-production-manual.yml  deploy-production.yml  deploy-staging.yml  duplication-check.yml  e2e-tests.yml  e2e-ui-tests.yml  frontend-build.yml  inference.yml  pr-metrics.yml  pr-title.yml  provider-anthropic.yml  provider-openai.yml  release-please.yml  security-audit.yml  ui-library-update.yml
.husky/: commit-msg  pre-commit
.kiro/steering/: product.md  structure.md  tech.md
.plan/: implementation.md  plan.md
_docs/20251027--mcp-integration/: architecture.md  prd.md
_docs/20251030--locaboo-mcp-integration/: architecture-simplified.md  architecture.md  prd.md
_docs/20251030--simplified-mcp-auth/: architecture.md  prd.md
_docs/AYC-109--scheduled-tasks/: prd.md
_docs/AYC-110--sso/: prd.md
_docs/AYC-115--sso/: prd.md
_docs/AYC-51--marketplace/: prd.md
_docs/AYC-55--teams/: prd.md
_docs/AYC-77-usage-based-pricing/: PRD.md
_docs/pr-7-testing-pipeline/: investigation.md  tickets.md
ayunis-core-anonymize/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
ayunis-core-anonymize/app/: main.py  models.py  presidio_service.py
ayunis-core-anonymize/config/: languages-config.yml
ayunis-core-backend/: .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .env.example  .env.test  .gitignore  .jscpd-known-duplicates.json  .nsprc  .prettierignore  .prettierrc  1764339419599-AddAnonymousOnlyToPermittedModel.ts  BUGBOT.md  Dockerfile  Dockerfile.dev  README.md  appsignal-hooks.cjs  appsignal.cjs  docker-README.md  docker-compose.dev.yml  docker-compose.yml  eslint.complexity.config.mjs  eslint.config.mjs  jest.setup.js  knip.json  orval.config.ts  package-lock.json  package.json  tsconfig.6drsw2grkkh.json  tsconfig.json
ayunis-core-backend/.cursor/: BUGBOT.md
ayunis-core-backend/docker/: entrypoint.dev.sh
ayunis-core-backend/scripts/: bundle-frontend.sh  cleanup-orphaned-source-data.sql
ayunis-core-backend/src/: main.ts
ayunis-core-backend/test/: agents-tools-integration.e2e-spec.ts  agents-tools.e2e-spec.ts  (+4 more)
ayunis-core-code-execution/: .gitignore  Dockerfile  README.md  executor.py  main.py  models.py  pyproject.toml  requirements.txt  server.py
ayunis-core-code-execution/ayunis_code_execution.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ayunis-core-e2e-ui-tests/: .gitignore  .gitlab-ci.yml  .prettierrc  Dockerfile  cypress.config.ts  eslint.config.ts  package-lock.json  package.json  tsconfig.json
ayunis-core-frontend/: .cta.json  .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .dockerignore  .env.example  .env.test  .gitignore  .jscpd-known-duplicates.json  .prettierignore  BUGBOT.md  README.md  components.json  eslint.config.mjs  index.html  knip.json  orval.config.ts  package-lock.json  package.json  tsconfig.hl9j0nab35.json  tsconfig.qfgl9zkbby.json  tsconfig.tsbuildinfo  vite.config.js
scripts/: backup.sh  check-complexity.sh  check-duplication.sh  check-file-size.sh  check-spotlight-coverage.sh  restore.sh
(+5260 files in other folders)
