[project]
name = "ms-presidio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "de-core-news-sm",
    "fastapi>=0.121.3",
    "gliner>=0.2.5",
    "onnxruntime>=1.17.0",
    "presidio-analyzer>=2.2.360",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.sources]
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl" }
